welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: illegal start of simple expression
    estFaceVert= = true
                 ^